--- a/package.json
+++ b/package.json
@@ -17,19 +17,21 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
-    "dotenv": "^8.2.0",
-    "express": "^4.17.1",
-    "helmet": "^4.3.1",
-    "knex": "^0.21.15",
-    "morgan": "^1.10.0",
+    "dotenv": "^6.2.0",
+    "express": "^4.16.4",
+    "helmet": "^4.2.0",
+    "knex": "^0.21.12",
+    "morgan": "^1.9.1",
     "pg": "^8.5.1",
-    "xss": "^1.0.8"
+    "postgrator-cli": "^3.1.0",
+    "valid-url": "^1.0.9",
+    "winston": "^3.2.1",
+    "xss": "^1.0.3"
   },
   "devDependencies": {
     "chai": "^4.2.0",
     "mocha": "^8.2.1",
     "nodemon": "^2.0.6",
-    "postgrator-cli": "^3.2.0",
-    "supertest": "^6.0.1"
+    "supertest": "^3.3.0"
   }
 }
