--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "dev": "nodemon src/server.js",
     "predeploy": "npm audit",
     "deploy": "git push heroku main",
+    "postdeploy": "npm run migrate:production",
     "migrate:test": "env NODE_ENV=test npm run migrate",
+    "migrate:production": "heroku run npm run migrate",
     "migrate": "postgrator --config postgrator-config.js"
   },
   "keywords": [],
