--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "deploy": "git push heroku main",
     "postdeploy": "npm run migrate:production",
     "migrate:test": "env NODE_ENV=test npm run migrate",
-    "migrate:production": "heroku run npm run migrate",
+    "migrate:production": "heroku run PGSSLMODE=no-verify npm run migrate",
     "migrate": "postgrator --config postgrator-config.js"
   },
   "keywords": [],
